Swagger fix cookies params, change to new deploy link.
